examples/scr-k8s-monitoring/sas-container-runtime.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scr-deployment
  labels:
    app: scr
spec:
  replicas: <pod_number>
  selector:
    matchLabels:
      app: scr
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/prometheus"
        prometheus.io/port: "8080"
      labels:
        app: scr
    spec:
      containers:
      - name: scr
        image: <scr_image>
        resources:
          limits:
            memory: <pod_memory_limit>
            cpu: <pod_cpu_limit>
        ports:
        - containerPort: 8080
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: scr-service
spec:
  selector:
    app: scr
  ports:
    - port: 8080
